[gd_scene load_steps=2 format=3 uid="uid://dr1x22kdg8oeb"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_aflyj"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_aflyj")

[node name="Logo" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -9.5
offset_right = 15.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Zero Fall"

[node name="ButtonPlay" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -30.0
offset_right = -73.8109
offset_bottom = -4.00034
grow_horizontal = 0
grow_vertical = 0
text = "Play"

[node name="ButtonSettings" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -30.0
offset_right = -30.8109
offset_bottom = -4.00034
grow_horizontal = 0
grow_vertical = 0
text = "Settings"

[node name="ButtonQuit" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -30.0
offset_right = -4.81091
offset_bottom = -4.00034
grow_horizontal = 0
grow_vertical = 0
text = "Quit
"

[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
